--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@ limitations under the License. -->
 
         </activity>
         <activity android:name=".EditWordActivity"></activity>
+        <activity android:name=".SearchActivity" />
 
     </application>
 
